<resources>
    <string name="app_name">PostList</string>
    <string name="post_title_example">His mother had always taught him</string>
    <string name="post_body_example">His mother had always taught him not to ever think of himself as better than others. He\'d tried to live by this motto. He never looked down on those who were less fortunate or who had less money than him. But the stupidity of the group of people he was talking to made him change his mind.</string>
    <string name="reaction">reaction</string>
    <string name="comment">comment</string>
    <string name="add_to_bookmark">add to bookmark</string>
    <string name="user_image">user image</string>
    <string name="user_name">user name</string>
    <string name="username_example">yraigatt3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_message">Error while loading the data!</string>
    <string name="comment_example">What terrific math skills you’re showing!</string>
    <string name="comments">Comments</string>
    <string name="full_name_example">Terry Medhurst</string>
    <string name="mail_example">atuny0@sohu.com</string>
    <string name="birth_date_example">2000–12–25</string>
    <string name="phone_number_example">+63 791 675 8914</string>
    <string name="address_example">1745 T Street Southeast</string>
    <string name="tag_example">fiction</string>
    <string name="no_comment_message">No comment on this post.</string>
</resources>