<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/extra_small_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding">

        <TextView
            android:id="@+id/tv_post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/small_padding"
            android:text="@string/post_title_example"
            android:textColor="@color/post_title_text_color"
            android:textSize="@dimen/extra_large_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutUser" />

        <TextView
            android:id="@+id/tv_post_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_margin"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="@dimen/large_size"
            android:paddingHorizontal="@dimen/small_padding"
            android:text="@string/post_body_example"
            android:textColor="@color/post_body_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_post_title" />

        <LinearLayout
            android:id="@+id/linearLayoutIcons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvPostTags">

            <ImageView
                android:id="@+id/ic_reaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/reaction"
                app:srcCompat="@drawable/ic_favorite_border" />

            <ImageView
                android:id="@+id/ic_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/comment"
                app:srcCompat="@drawable/ic_comment" />

            <ImageView
                android:id="@+id/ic_add_to_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/add_to_bookmark"
                app:srcCompat="@drawable/ic_bookmark_border" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- card view for rounded image view -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/iv_user_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/user_image"
                    tools:ignore="ImageContrastCheck" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_post_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/double_extra_small_margin"
                android:contentDescription="@string/user_name"
                android:textColor="@color/username_text_color"
                android:textSize="@dimen/large_size" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPostTags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_post_body"
            tools:listitem="@layout/item_tag" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>